# m5-forecasting

./: README.md  pyproject.toml
kaggle_notebooks/: NaiveBencrhmarkWRMSSE.ipynb  NaiveForecaster.ipynb  PointForecastsBenchmarks.ipynb  m5-eda.ipynb  notebook1.ipynb
m5_forecasting/: definitions.py
m5_forecasting/src/: aggregation.py  evaluation.py
m5_forecasting/src/forecasters/: naive_forecaster.py
tests/: test_m5_forecasting.py  test_src_aggregation.py  test_src_evaluation.py  test_src_evaluation_rmsse.py  test_src_evaluation_wrmsse.py  test_src_forecasters_naive.py
tests/fixtures/: fixtures.py
