[tool.poetry]
name = "m5_forecasting"
version = "0.1.0"
description = ""
authors = ["Shengy <shengy90@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
